--- a/docker-with-spring-boot/pom.xml
+++ b/docker-with-spring-boot/pom.xml
@@ -3,13 +3,14 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>spring.cloud.on.docker</groupId>
-        <artifactId>idea-docker-learning</artifactId>
-        <version>1.0</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.7.RELEASE</version>
     </parent>
 
-    <groupId>spring.cloud.on.docker</groupId>
+    <groupId>idea.docker.learning</groupId>
     <artifactId>idea-docker-plugin-usage</artifactId>
 
     <version>1.0-SNAPSHOT</version>
@@ -18,8 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
     </dependencies>
